@@ -2,6 +2,7 @@
 * menu: items are sorted by name
 * menu: icon size set to 22
 * menu: forgoten g_free's were added
+* launchbar: drag-n-drop now accepts urls draged from web browsers
 
 4.9
 * new menu placement to not cover panel; used in menu and taskbar
